src/test/deca/context/valid/created/objet/def_meth_type.deca
// Description :
//      test de verification type de retour methode
//
// Resultats :
// ok

class A {
    int x;
    A init(){
       A a = new A();
       return a;
    }

}